removendo codigo duplicado, arrumando rotas
