# src/controllers/typeRoomController.js
@@ -1,95 +1,70 @@
 import {
-    getAllTypeRooms,
     createTypeRoom,
-    updateTypeRoom,
     deleteTypeRoom,
+    getAllTypeRooms,
+    getTypeRoomByDescription,
     getTypeRoomById,
-    getTypeRoomByDescription
+    updateTypeRoom
 } from '../repositories/typeRoomRepository.js';
-import { validationResult } from 'express-validator';
 
 const typeRoomController = {
 
     async createTypeRoomController(req, res) {
-        const { descricao } = req.body;
-
-        const validation = validationResult(req);
-        if (!validation.isEmpty()) {
-            return res.status(400).json({ erro: validation.array() });
-        }
+        const {descricao} = req.body;
 
         try {
-            const existingItem = await getTypeRoomByDescription(descricao);
-            if (existingItem) {
-                return res.status(400).json({ success: false, msg: `${descricao} já existe.`});
-            }
-            
-            const typeRoomData = await createTypeRoom({ descricao });
+            const typeRoomData = await createTypeRoom({descricao});
 
-            res.json({ success: true, msg: 'Tipo de sala cadastrado com sucesso', typeRoomData });
+            res.json({success: true, msg: 'Tipo de sala cadastrado com sucesso', typeRoomData});
         } catch (error) {
-            res.status(500).json({ success: false, msg: 'Falha ao cadastrar o tipo de sala' });
+            res.status(500).json({success: false, msg: 'Falha ao cadastrar o tipo de sala'});
         }
     },
 
     async getAllTypeRoomsController(req, res) {
-        const validation = validationResult(req);
-        if (!validation.isEmpty()) {
-            return res.status(400).json({ erro: validation.array() });
-        }
-
         try {
             const typeRooms = await getAllTypeRooms();
 
-            res.json({ success: true, msg: 'Pesquisa solicitada com sucesso', typeRooms });
+            res.json({success: true, msg: 'Pesquisa solicitada com sucesso', typeRooms});
         } catch (error) {
-            res.status(500).json({ success: false, msg: 'Falha ao buscar os tipos de sala' });
+            res.status(500).json({success: false, msg: 'Falha ao buscar os tipos de sala'});
         }
     },
 
     async getTypeRoomByIdController(req, res) {
-        const validation = validationResult(req);
-        if (!validation.isEmpty()) {
-            return res.status(400).json({ erro: validation.array() });
-        }
-        const { id } = req.params;
+        const {id_tipo_sala} = req.params;
 
         try {
-            const typeRoomData = await getTypeRoomById(parseInt(id));
+            const typeRoomData = await getTypeRoomById(parseInt(id_tipo_sala));
 
-            if (!typeRoomData) return res.status(404).json({ success: false, msg: 'Tipo de sala não encontrado' });
+            if (!typeRoomData) return res.status(404).json({success: false, msg: 'Tipo de sala não encontrado'});
 
-            res.json({ success: true, msg: 'Tipo de sala encontrado com sucesso', typeRoomData });
+            res.json({success: true, msg: 'Tipo de sala encontrado com sucesso', typeRoomData});
         } catch (error) {
-            res.status(500).json({ success: false, msg: 'Falha ao buscar o tipo de sala' });
+            res.status(500).json({success: false, msg: 'Falha ao buscar o tipo de sala'});
         }
     },
 
     async updateTypeRoomController(req, res) {
-        const { id } = req.params;
-        const { descricao } = req.body;
-
-        const validation = validationResult(req);
-        if (!validation.isEmpty()) {
-            return res.status(400).json({ erro: validation.array() });
-        }
+        const {id_tipo_sala} = req.params;
+        const {descricao} = req.body;
 
         if (descricao) {
             const typeRoomWithSameDescription = await getTypeRoomByDescription(descricao);
 
-            if (typeRoomWithSameDescription && typeRoomWithSameDescription.id_tipo_sala !== id) {
-                return res.status(400).json({ success: false, msg: 'Descrição já está em uso por outro tipo de sala' });
+            if (typeRoomWithSameDescription && typeRoomWithSameDescription.id_tipo_sala !== id_tipo_sala) {
+                return res.status(400).json({success: false, msg: 'Descrição já está em uso por outro tipo de sala'});
             }
         }
 
         try {
-            const typeRoomData = await getTypeRoomById(parseInt(id));
+            const typeRoomData = await getTypeRoomById(parseInt(id_tipo_sala));
 
             if (!typeRoomData) {
-                return res.status(404).json({ success: false, msg: 'Tipo de sala não encontrado' });
+                return res.status(404).json({success: false, msg: 'Tipo de sala não encontrado'});
             }
 
-            const updatedTypeRoom = await updateTypeRoom(parseInt(id), { descricao });
+            const updatedTypeRoom = await updateTypeRoom(parseInt(id_tipo_sala), {descricao});
 
             res.json({
                 success: true,
@@ -97,28 +72,23 @@ const typeRoomController = {
                 typeRoom: updatedTypeRoom,
             });
         } catch (error) {
-            res.status(500).json({ success: false, msg: 'Falha ao atualizar o tipo de sala' });
+            res.status(500).json({success: false, msg: 'Falha ao atualizar o tipo de sala'});
         }
     },
 
     async deleteTypeRoomController(req, res) {
-        const validation = validationResult(req);
-        if (!validation.isEmpty()) {
-            return res.status(400).json({ erro: validation.array() });
-        }
-
-        const { id } = req.params;
-        const typeRoom = await getTypeRoomById(parseInt(id));
+        const {id_tipo_sala} = req.params;
+        const typeRoom = await getTypeRoomById(parseInt(id_tipo_sala));
 
         if (!typeRoom) {
-            return res.status(404).json({ success: false, msg: 'Tipo de sala não encontrado' });
+            return res.status(404).json({success: false, msg: 'Tipo de sala não encontrado'});
         }
 
         try {
-            await deleteTypeRoom(parseInt(id));
-            res.json({ success: true, msg: 'Tipo de sala deletado com sucesso' });
+            await deleteTypeRoom(parseInt(id_tipo_sala));
+            res.json({success: true, msg: 'Tipo de sala deletado com sucesso'});
         } catch (error) {
-            res.status(500).json({ success: false, msg: 'Falha ao deletar o tipo de sala' });
+            res.status(500).json({success: false, msg: 'Falha ao deletar o tipo de sala'});
         }
     },
 }
